*
* 2.0-M5
*

- Fixed bug in handling floating point Windows performance counters
- Management console:
	- Fixed broken VPN connectors configuration
- Fixed issues: #817


*
* 2.0-M4
*

- Script export/import
- Object tools export/import
- DCI summary tables export/import
- Template hierarchy preserved during export/import
- NXSL functions and classes to work with alarms
- MEGATEC protocol support in UPS subagent
- Fixed broken WoL functionality
- Fixed broken PING subagent
- Fixed database upgrade issues on MS SQL
- IPv6 support in PING subagent
- Network device driver can be manually selected for node by setting snmp.driver custom attribute
- Added default melodies for alarms
- Added option to play sound on alarm sound preference page
- Interface objects can be used on network maps
- Android Agent:
	- Added support for Lollipop MR1 (v5.1)
	- Updated support library
- Android Console:
	- Changed order of overview items to match Java console (node browser)
	- Added MTU field in interface details (node browser)
	- Updated support library
- Fixed issues: #655, #657, #696, #701, #724, #799, #800, #803, #804, #805, #811, #812, #813


*
* 2.0-M3
*

- IPv6 support: communications, address information, topology
- New NXSL functions: gethostbyaddr, gethostbyname, md5, sha1, AgentReadList
- Added posibility to wakeup unmanaged node
- Instance discovery separated from configuration polls
- Instance discovery type "SNMP Walk - OIDs" sets instance name to OID value by default
- GPIO.PinState parameter in Raspberry Pi subagent
- Server housekeeping process runs once per day at fixed configurable time
- Server housekeeping process performance optimization
- Added driver for Qtech OLT switches
- New agent parameter FileSystem.Type(*)
- New agent parameters Net.Resolver.AddressByName(*) and Net.Resolver.NameByAddress(*)
- Fixed broken SNMP proxy functionality in agent
- Management console:
	- Fixed broken popup menu actions on "Interfaces" tab