@@ -3,6 +3,7 @@
 *
 
 - Fixed bug in handling floating point Windows performance counters
+- Added "comments" attribute to NXSL "DCI" class
 - Management console:
 	- Fixed broken VPN connectors configuration
 - Fixed issues: #817
